@@ -33,8 +33,8 @@ extern "C" {
 #define MagickLibAddendum  "-9"
 #define MagickLibInterface  4
 #define MagickLibMinInterface  4
-#define MagickReleaseDate  "2010-11-11"
-#define MagickChangeDate   "20101108"
+#define MagickReleaseDate  "2010-11-13"
+#define MagickChangeDate   "20101113"
 #define MagickAuthoritativeURL  "http://www.imagemagick.org"
 #if defined(MAGICKCORE_OPENMP_SUPPORT)
 #define MagickOpenMPFeature  "OpenMP "
